--- a/textuality-client/package.json
+++ b/textuality-client/package.json
@@ -2,16 +2,25 @@
   "name": "textuality-client",
   "private": true,
   "scripts": {
-    "start": "meteor run",
+    "start": "MONGO_URL=mongodb://localhost:3001/meteor MONGO_OPLOG_URL=mongodb://localhost:3001/local meteor --port=3002",
     "test": "meteor test --once --driver-package meteortesting:mocha",
     "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
-    "@babel/runtime": "^7.3.4",
-    "meteor-node-stubs": "^0.4.1",
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0"
+    "@babel/runtime": "~7.5.5",
+    "array-sort": "~1.0.0",
+    "autobind-decorator": "^2.4.0",
+    "classnames": "~2.2.6",
+    "merge-options": "^1.0.1",
+    "meteor-node-stubs": "~0.4.1",
+    "moment": "~2.24.0",
+    "moment-timezone": "^0.5.26",
+    "react": "~16.8.6",
+    "react-dom": "~16.8.6",
+    "react-moment": "^0.9.2",
+    "react-router-dom": "~5.0.1",
+    "simpl-schema": "~1.5.5"
   },
   "meteor": {
     "mainModule": {
@@ -19,5 +28,11 @@
       "server": "server/main.js"
     },
     "testModule": "tests/main.js"
+  },
+  "devDependencies": {
+    "@babel/core": "~7.5.5",
+    "@babel/plugin-proposal-class-properties": "~7.5.5",
+    "@babel/plugin-proposal-decorators": "~7.4.4",
+    "babel-plugin-module-resolver": "~3.2.0"
   }
 }
