Adding readme and updating scripts

--- a/textuality-client/package.json
+++ b/textuality-client/package.json
@@ -2,7 +2,7 @@
   "name": "textuality-client",
   "private": true,
   "scripts": {
-    "start": "MONGO_URL=mongodb://localhost:3001/meteor MONGO_OPLOG_URL=mongodb://localhost:3001/local meteor --port=3002",
+    "start": "meteor npm install && MONGO_URL=mongodb://localhost:3001/meteor MONGO_OPLOG_URL=mongodb://localhost:3001/local meteor --port=3002",
     "test": "meteor test --once --driver-package meteortesting:mocha",
     "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
     "visualize": "meteor --production --extra-packages bundle-visualizer"
