--- a/textuality-admin/package.json
+++ b/textuality-admin/package.json
@@ -2,7 +2,7 @@
   "name": "textuality-admin",
   "private": true,
   "scripts": {
-    "start": "meteor run",
+    "start": "meteor npm install && meteor run",
     "test": "meteor test --once --driver-package meteortesting:mocha",
     "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
     "visualize": "meteor --production --extra-packages bundle-visualizer"
