--- a/textuality-admin/package.json
+++ b/textuality-admin/package.json
@@ -2,7 +2,7 @@
   "name": "textuality-admin",
   "private": true,
   "scripts": {
-    "start": "meteor npm install && meteor run",
+    "start": "meteor npm install && meteor run --settings ../settings.json",
     "test": "meteor test --once --driver-package meteortesting:mocha",
     "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
     "visualize": "meteor --production --extra-packages bundle-visualizer"
@@ -10,23 +10,25 @@
   "dependencies": {
     "@babel/runtime": "~7.5.5",
     "array-sort": "~1.0.0",
-    "autobind-decorator": "^2.4.0",
+    "autobind-decorator": "~2.4.0",
+    "body-parser": "~1.19.0",
     "bootstrap": "~4.3.1",
     "bootswatch": "~4.3.1",
     "classnames": "~2.2.6",
-    "merge-options": "^1.0.1",
+    "merge-options": "~1.0.1",
     "meteor-node-stubs": "~0.4.1",
     "moment": "~2.24.0",
-    "moment-timezone": "^0.5.26",
+    "moment-timezone": "~0.5.26",
     "react": "~16.8.6",
     "react-bootstrap-table-next": "~3.1.7",
     "react-dom": "~16.8.6",
-    "react-moment": "^0.9.2",
+    "react-moment": "~0.9.2",
     "react-router-dom": "~5.0.1",
     "react-select": "~3.0.4",
     "react-toastify": "~5.3.2",
     "reactstrap": "~8.0.1",
     "simpl-schema": "~1.5.5",
+    "twilio": "~3.33.2",
     "uniforms": "~2.2.0",
     "uniforms-bootstrap4": "~2.2.0",
     "uniforms-bridge-simple-schema-2": "~2.2.0"
