--- a/textuality-client/.babelrc
+++ b/textuality-client/.babelrc
@@ -11,7 +11,8 @@
         "modules": "./imports/ui/modules",
         "layouts": "./imports/ui/layouts",
         "pages": "./imports/ui/pages",
-        "startup": "./imports/startup"
+        "startup": "./imports/startup",
+        "services": "./imports/services"
       }
     }]
   ]
