--- a/textuality-client/package.json
+++ b/textuality-client/package.json
@@ -2,7 +2,7 @@
   "name": "textuality-client",
   "private": true,
   "scripts": {
-    "start": "meteor npm install && MONGO_URL=mongodb://localhost:3001/meteor MONGO_OPLOG_URL=mongodb://localhost:3001/local meteor --port=3002",
+    "start": "meteor npm install && MONGO_URL=mongodb://localhost:3001/meteor MONGO_OPLOG_URL=mongodb://localhost:3001/local meteor --port=3002 --settings ../settings.json",
     "test": "meteor test --once --driver-package meteortesting:mocha",
     "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
     "visualize": "meteor --production --extra-packages bundle-visualizer"
@@ -10,17 +10,19 @@
   "dependencies": {
     "@babel/runtime": "~7.5.5",
     "array-sort": "~1.0.0",
-    "autobind-decorator": "^2.4.0",
+    "autobind-decorator": "~2.4.0",
+    "body-parser": "~1.19.0",
     "classnames": "~2.2.6",
-    "merge-options": "^1.0.1",
+    "merge-options": "~1.0.1",
     "meteor-node-stubs": "~0.4.1",
     "moment": "~2.24.0",
-    "moment-timezone": "^0.5.26",
+    "moment-timezone": "~0.5.26",
     "react": "~16.8.6",
     "react-dom": "~16.8.6",
-    "react-moment": "^0.9.2",
+    "react-moment": "~0.9.2",
     "react-router-dom": "~5.0.1",
-    "simpl-schema": "~1.5.5"
+    "simpl-schema": "~1.5.5",
+    "twilio": "~3.33.2"
   },
   "meteor": {
     "mainModule": {
