--- a/textuality-admin/package.json
+++ b/textuality-admin/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "~4.3.1",
     "bootswatch": "~4.3.1",
     "classnames": "~2.2.6",
+    "cloudinary": "^1.14.0",
     "merge-options": "~1.0.1",
     "meteor-node-stubs": "~0.4.1",
     "moment": "~2.24.0",
