--- a/textuality-client/package.json
+++ b/textuality-client/package.json
@@ -13,6 +13,7 @@
     "autobind-decorator": "~2.4.0",
     "body-parser": "~1.19.0",
     "classnames": "~2.2.6",
+    "cloudinary": "^1.14.0",
     "merge-options": "~1.0.1",
     "meteor-node-stubs": "~0.4.1",
     "moment": "~2.24.0",
