--- a/textuality-admin/package.json
+++ b/textuality-admin/package.json
@@ -15,7 +15,8 @@
     "bootstrap": "~4.3.1",
     "bootswatch": "~4.3.1",
     "classnames": "~2.2.6",
-    "cloudinary": "^1.14.0",
+    "cloudinary": "~1.14.0",
+    "cloudinary-core": "~2.6.3",
     "merge-options": "~1.0.1",
     "meteor-node-stubs": "~0.4.1",
     "moment": "~2.24.0",
@@ -29,7 +30,6 @@
     "react-toastify": "~5.3.2",
     "reactstrap": "~8.0.1",
     "simpl-schema": "~1.5.5",
-    "twilio": "~3.33.2",
     "uniforms": "~2.2.0",
     "uniforms-bootstrap4": "~2.2.0",
     "uniforms-bridge-simple-schema-2": "~2.2.0"
