--- a/textuality-client/package.json
+++ b/textuality-client/package.json
@@ -13,7 +13,8 @@
     "autobind-decorator": "~2.4.0",
     "body-parser": "~1.19.0",
     "classnames": "~2.2.6",
-    "cloudinary": "^1.14.0",
+    "cloudinary": "~1.14.0",
+    "cloudinary-core": "~2.6.3",
     "merge-options": "~1.0.1",
     "meteor-node-stubs": "~0.4.1",
     "moment": "~2.24.0",
@@ -22,8 +23,7 @@
     "react-dom": "~16.8.6",
     "react-moment": "~0.9.2",
     "react-router-dom": "~5.0.1",
-    "simpl-schema": "~1.5.5",
-    "twilio": "~3.33.2"
+    "simpl-schema": "~1.5.5"
   },
   "meteor": {
     "mainModule": {
