--- a/textuality-admin/package.json
+++ b/textuality-admin/package.json
@@ -17,6 +17,7 @@
     "classnames": "~2.2.6",
     "cloudinary": "~1.14.0",
     "cloudinary-core": "~2.6.3",
+    "emoji-aware": "~3.0.5",
     "merge-options": "~1.0.1",
     "meteor-node-stubs": "~0.4.1",
     "moment": "~2.24.0",
