Missions, alternate screens, leaderboards

--- a/textuality-admin/package.json
+++ b/textuality-admin/package.json
@@ -22,6 +22,8 @@
     "meteor-node-stubs": "~0.4.1",
     "moment": "~2.24.0",
     "moment-timezone": "~0.5.26",
+    "pokemon": "^2.0.0",
+    "random-words": "^1.1.0",
     "react": "~16.8.6",
     "react-bootstrap-table-next": "~3.1.7",
     "react-dom": "~16.8.6",
@@ -30,6 +32,7 @@
     "react-select": "~3.0.4",
     "react-toastify": "~5.3.2",
     "reactstrap": "~8.0.1",
+    "shuffle-array": "^1.0.1",
     "simpl-schema": "~1.5.5",
     "uniforms": "~2.2.0",
     "uniforms-bootstrap4": "~2.2.0",
