--- a/textuality-client/package.json
+++ b/textuality-client/package.json
@@ -20,10 +20,14 @@
     "meteor-node-stubs": "~0.4.1",
     "moment": "~2.24.0",
     "moment-timezone": "~0.5.26",
+    "pokemon": "^2.0.0",
+    "randomwords": "^1.0.3",
     "react": "~16.8.6",
+    "react-countdown-now": "^2.1.1",
     "react-dom": "~16.8.6",
     "react-moment": "~0.9.2",
     "react-router-dom": "~5.0.1",
+    "shuffle-array": "^1.0.1",
     "simpl-schema": "~1.5.5"
   },
   "meteor": {
