--- a/textuality-admin/package.json
+++ b/textuality-admin/package.json
@@ -2,17 +2,25 @@
   "name": "textuality-admin",
   "private": true,
   "scripts": {
-    "start": "meteor run",
+    "start": "meteor npm install && meteor run --port 4000",
     "test": "meteor test --once --driver-package meteortesting:mocha",
     "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
     "@babel/runtime": "^7.17.9",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.11",
     "meteor-node-stubs": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "simpl-schema": "^3.0.1"
+    "react-router-dom": "^6.4.2",
+    "simpl-schema": "^3.0.1",
+    "uniforms": "^3.10.1",
+    "uniforms-bridge-simple-schema-2": "^3.10.1",
+    "uniforms-mui": "^3.10.1"
   },
   "meteor": {
     "mainModule": {
