--- a/scripts/package.json
+++ b/scripts/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "colors": "^1.1.2"
+    "colors": "^1.1.2",
+    "ngrok": "^4.3.3"
   }
 }
