--- a/textuality-client/package.json
+++ b/textuality-client/package.json
@@ -28,6 +28,7 @@
     "react-dom": "~16.8.6",
     "react-moment": "~0.9.2",
     "react-router-dom": "~5.0.1",
+    "react-transition-group": "^4.4.5",
     "shuffle-array": "^1.0.1",
     "simpl-schema": "~1.5.5"
   },
