--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node scripts/run-dev.js",
-    "open-tunnel": "bin/ngrok http 5002"
+    "open-tunnel": "ngrok http 4002",
+    "sync-prod-to-local": "./scripts/sync-prod-to-local.sh"
   },
   "repository": {
     "type": "git",
