--- a/textuality-admin/package.json
+++ b/textuality-admin/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@babel/runtime": "~7.5.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.16",
     "@types/body-parser": "^1.19.4",
     "@types/meteor": "^2.9.5",
     "array-sort": "~1.0.0",
@@ -19,7 +22,6 @@
     "bootswatch": "~4.3.1",
     "classnames": "~2.2.6",
     "cloudinary": "~1.41.0",
-    "dotenv": "^16.3.1",
     "emoji-aware": "~3.0.5",
     "merge-options": "~1.0.1",
     "meteor-node-stubs": "~1.2.5",
@@ -27,20 +29,19 @@
     "moment-timezone": "~0.5.26",
     "pokemon": "^2.0.0",
     "random-words": "^1.1.0",
-    "react": "~16.8.6",
+    "react": "^18.2.0",
     "react-bootstrap-table-next": "~3.1.7",
-    "react-dom": "~16.8.6",
+    "react-dom": "^18.2.0",
     "react-moment": "~0.9.2",
     "react-router-dom": "~5.0.1",
     "react-select": "~3.0.4",
     "react-toastify": "~5.3.2",
     "reactstrap": "~8.0.1",
     "shuffle-array": "^1.0.1",
-    "simpl-schema": "~1.5.5",
+    "simpl-schema": "~3.4.1",
     "uniforms": "~2.2.0",
     "uniforms-bootstrap4": "~2.2.0",
-    "uniforms-bridge-simple-schema-2": "~2.2.0",
-    "whatsapp": "0.0.5-Alpha"
+    "uniforms-bridge-simple-schema-2": "~2.2.0"
   },
   "meteor": {
     "mainModule": {
