--- a/textuality-admin/package.json
+++ b/textuality-admin/package.json
@@ -12,9 +12,14 @@
     "@babel/runtime": "~7.5.5",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
+    "@tanstack/react-table": "^8.10.7",
     "@types/body-parser": "^1.19.4",
     "@types/meteor": "^2.9.5",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
     "array-sort": "~1.0.0",
     "autobind-decorator": "~2.4.0",
     "body-parser": "~1.19.0",
@@ -35,17 +40,18 @@
     "react-moment": "~0.9.2",
     "react-router-dom": "~5.0.1",
     "react-select": "~3.0.4",
-    "react-toastify": "~5.3.2",
+    "react-toastify": "~9.1.3",
     "reactstrap": "~8.0.1",
-    "shuffle-array": "^1.0.1",
+    "shuffle-array": "~1.0.1",
     "simpl-schema": "~3.4.1",
     "uniforms": "~2.2.0",
     "uniforms-bootstrap4": "~2.2.0",
-    "uniforms-bridge-simple-schema-2": "~2.2.0"
+    "uniforms-bridge-simple-schema-2": "~2.2.0",
+    "wouter": "~2.12.1"
   },
   "meteor": {
     "mainModule": {
-      "client": "client/main.jsx",
+      "client": "client/main.tsx",
       "server": "server/main.js"
     },
     "testModule": "tests/main.js"
