--- a/textuality-admin/package.json
+++ b/textuality-admin/package.json
@@ -16,10 +16,6 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
     "@tanstack/react-table": "^8.10.7",
-    "@types/body-parser": "^1.19.4",
-    "@types/meteor": "^2.9.5",
-    "@types/react": "^18.2.33",
-    "@types/react-dom": "^18.2.14",
     "array-sort": "~1.0.0",
     "autobind-decorator": "~2.4.0",
     "body-parser": "~1.19.0",
@@ -49,17 +45,22 @@
     "uniforms-bridge-simple-schema-2": "~2.2.0",
     "wouter": "~2.12.1"
   },
-  "meteor": {
-    "mainModule": {
-      "client": "client/main.tsx",
-      "server": "server/main.js"
-    },
-    "testModule": "tests/main.js"
-  },
   "devDependencies": {
     "@babel/core": "~7.5.5",
     "@babel/plugin-proposal-class-properties": "~7.5.5",
     "@babel/plugin-proposal-decorators": "~7.4.4",
-    "babel-plugin-module-resolver": "~3.2.0"
+    "@types/node": "~20.8.10",
+    "@types/react": "~18.2.33",
+    "@types/react-dom": "~18.2.14",
+    "babel-plugin-module-resolver": "~3.2.0",
+    "prettier": "~3.0.3",
+    "typescript": "~5.2.2"
+  },
+  "meteor": {
+    "mainModule": {
+      "client": "client/main.tsx",
+      "server": "server/main.ts"
+    },
+    "testModule": "tests/main.js"
   }
 }
