--- a/textuality-admin/package.json
+++ b/textuality-admin/package.json
@@ -49,6 +49,7 @@
     "@babel/core": "~7.5.5",
     "@babel/plugin-proposal-class-properties": "~7.5.5",
     "@babel/plugin-proposal-decorators": "~7.4.4",
+    "@types/body-parser": "^1.19.4",
     "@types/node": "~20.8.10",
     "@types/react": "~18.2.33",
     "@types/react-dom": "~18.2.14",
