--- a/textuality-admin/package.json
+++ b/textuality-admin/package.json
@@ -15,7 +15,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
-    "@tanstack/react-table": "^8.10.7",
+    "@mui/x-data-grid": "^6.17.0",
     "array-sort": "~1.0.0",
     "autobind-decorator": "~2.4.0",
     "body-parser": "~1.19.0",
@@ -24,25 +24,22 @@
     "classnames": "~2.2.6",
     "cloudinary": "~1.41.0",
     "emoji-aware": "~3.0.5",
+    "luxon": "^3.4.3",
     "merge-options": "~1.0.1",
     "meteor-node-stubs": "~1.2.5",
-    "moment": "~2.24.0",
-    "moment-timezone": "~0.5.26",
     "pokemon": "^2.0.0",
-    "random-words": "^1.1.0",
     "react": "^18.2.0",
-    "react-bootstrap-table-next": "~3.1.7",
     "react-dom": "^18.2.0",
-    "react-moment": "~0.9.2",
     "react-router-dom": "~5.0.1",
     "react-select": "~3.0.4",
     "react-toastify": "~9.1.3",
     "reactstrap": "~8.0.1",
     "shuffle-array": "~1.0.1",
     "simpl-schema": "~3.4.1",
-    "uniforms": "~2.2.0",
+    "uniforms": "^4.0.0-alpha.5",
     "uniforms-bootstrap4": "~2.2.0",
-    "uniforms-bridge-simple-schema-2": "~2.2.0",
+    "uniforms-bridge-simple-schema-2": "^4.0.0-alpha.5",
+    "uniforms-mui": "^4.0.0-alpha.5",
     "wouter": "~2.12.1"
   },
   "devDependencies": {
@@ -50,6 +47,7 @@
     "@babel/plugin-proposal-class-properties": "~7.5.5",
     "@babel/plugin-proposal-decorators": "~7.4.4",
     "@types/body-parser": "^1.19.4",
+    "@types/luxon": "^3.3.3",
     "@types/node": "~20.8.10",
     "@types/react": "~18.2.33",
     "@types/react-dom": "~18.2.14",
