--- a/textuality-client/package.json
+++ b/textuality-client/package.json
@@ -10,8 +10,6 @@
   },
   "dependencies": {
     "@babel/runtime": "~7.5.5",
-    "@types/body-parser": "^1.19.4",
-    "@types/meteor": "~2.9.5",
     "array-sort": "~1.0.0",
     "autobind-decorator": "~2.4.0",
     "body-parser": "~1.19.0",
@@ -23,20 +21,20 @@
     "moment": "~2.24.0",
     "moment-timezone": "~0.5.26",
     "pokemon": "^2.0.0",
-    "randomwords": "^1.0.3",
-    "react": "~16.8.6",
+    "react": "^18.2.0",
     "react-countdown-now": "^2.1.1",
-    "react-dom": "~16.8.6",
+    "react-dom": "^18.2.0",
     "react-moment": "~0.9.2",
     "react-router-dom": "~5.0.1",
     "react-transition-group": "^4.4.5",
     "shuffle-array": "^1.0.1",
-    "simpl-schema": "~3.4.1"
+    "simpl-schema": "~3.4.1",
+    "wouter": "~2.12.1"
   },
   "meteor": {
     "mainModule": {
-      "client": "client/main.jsx",
-      "server": "server/main.js"
+      "client": "client/main.tsx",
+      "server": "server/main.ts"
     },
     "testModule": "tests/main.js"
   },
@@ -44,6 +42,12 @@
     "@babel/core": "~7.5.5",
     "@babel/plugin-proposal-class-properties": "~7.5.5",
     "@babel/plugin-proposal-decorators": "~7.4.4",
-    "babel-plugin-module-resolver": "~3.2.0"
+    "@types/body-parser": "^1.19.4",
+    "@types/node": "~20.8.10",
+    "@types/react": "~18.2.33",
+    "@types/react-dom": "~18.2.14",
+    "babel-plugin-module-resolver": "~3.2.0",
+    "prettier": "~3.0.3",
+    "typescript": "~5.2.2"
   }
 }
