--- a/textuality-admin/package.json
+++ b/textuality-admin/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/runtime": "~7.5.5",
+    "@cloudinary/url-gen": "^1.12.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
