--- a/textuality-client/package.json
+++ b/textuality-client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/runtime": "~7.5.5",
+    "@cloudinary/url-gen": "^1.12.0",
     "array-sort": "~1.0.0",
     "autobind-decorator": "~2.4.0",
     "body-parser": "~1.19.0",
