--- a/textuality-admin/package.json
+++ b/textuality-admin/package.json
@@ -20,6 +20,7 @@
     "body-parser": "~1.19.0",
     "classnames": "~2.2.6",
     "cloudinary": "~1.41.0",
+    "cloudinary-core": "^2.13.0",
     "emoji-aware": "~3.0.5",
     "luxon": "^3.4.3",
     "meteor-node-stubs": "~1.2.5",
