--- a/textuality-admin/tsconfig.json
+++ b/textuality-admin/tsconfig.json
@@ -27,13 +27,16 @@
       "meteor/*": [
         "node_modules/@types/meteor/*",
         ".meteor/local/types/packages.d.ts"
-      ]
+      ],
+      // Hack to support react-meteor-data
+      "meteor/react-meteor-data": ["types/react-meteor-data.d.ts"]
     },
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "types": ["node"],
     "esModuleInterop": true,
-    "preserveSymlinks": true
+    "preserveSymlinks": true,
+    "typeRoots": ["types/"]
   },
   "exclude": ["./.meteor/**", "./packages/**"]
 }
