--- a/textuality-client/tsconfig.json
+++ b/textuality-client/tsconfig.json
@@ -27,7 +27,9 @@
       "meteor/*": [
         "node_modules/@types/meteor/*",
         ".meteor/local/types/packages.d.ts"
-      ]
+      ],
+      // Hack to support react-meteor-data
+      "meteor/react-meteor-data": ["types/react-meteor-data.d.ts"]
     },
     "moduleResolution": "node",
     "resolveJsonModule": true,
