--- a/textuality-client/package.json
+++ b/textuality-client/package.json
@@ -17,10 +17,11 @@
     "classnames": "~2.2.6",
     "cloudinary": "~1.41.0",
     "emoji-aware": "~3.0.5",
+    "luxon": "^3.4.3",
     "meteor-node-stubs": "~1.2.5",
     "pokemon": "^2.0.0",
     "react": "^18.2.0",
-    "react-countdown-now": "^2.1.1",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-transition-group": "^4.4.5",
     "shuffle-array": "^1.0.1",
