--- a/textuality-client/package.json
+++ b/textuality-client/package.json
@@ -14,6 +14,7 @@
     "@cloudinary/url-gen": "^1.12.0",
     "array-sort": "~1.0.0",
     "body-parser": "~1.19.0",
+    "canvas-confetti": "^1.9.0",
     "classnames": "~2.2.6",
     "cloudinary": "~1.41.0",
     "emoji-aware": "~3.0.5",
