--- a/textuality-client/package.json
+++ b/textuality-client/package.json
@@ -14,10 +14,10 @@
     "@cloudinary/url-gen": "^1.12.0",
     "array-sort": "~1.0.0",
     "body-parser": "~1.19.0",
-    "canvas-confetti": "^1.9.0",
     "classnames": "~2.2.6",
     "cloudinary": "~1.41.0",
     "emoji-aware": "~3.0.5",
+    "js-confetti": "^0.11.0",
     "luxon": "^3.4.3",
     "meteor-node-stubs": "~1.2.5",
     "pokemon": "^2.0.0",
