--- a/textuality-client/package.json
+++ b/textuality-client/package.json
@@ -43,6 +43,7 @@
     "@types/node": "~20.8.10",
     "@types/react": "~18.2.33",
     "@types/react-dom": "~18.2.14",
+    "@types/shuffle-array": "^1.0.4",
     "babel-plugin-module-resolver": "~3.2.0",
     "prettier": "~3.0.3",
     "typescript": "~5.2.2"
