--- a/textuality-admin/package.json
+++ b/textuality-admin/package.json
@@ -31,6 +31,7 @@
     "react-toastify": "~9.1.3",
     "shuffle-array": "~1.0.1",
     "simpl-schema": "~3.2.0",
+    "superb": "^4.0.0",
     "uniforms": "^4.0.0-alpha.5",
     "uniforms-bridge-simple-schema-2": "^4.0.0-alpha.5",
     "uniforms-mui": "^4.0.0-alpha.5",
