--- a/textuality-client/package.json
+++ b/textuality-client/package.json
@@ -27,6 +27,7 @@
     "react-transition-group": "^4.4.5",
     "shuffle-array": "^1.0.1",
     "simpl-schema": "~3.2.0",
+    "superb": "^4.0.0",
     "wouter": "~2.12.1"
   },
   "meteor": {
